--- a/src/autonomous_traversal/CMakeLists.txt
+++ b/src/autonomous_traversal/CMakeLists.txt
@@ -58,6 +58,8 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate services in the 'srv' folder
 add_service_files(
+   DIRECTORY
+   srv
    FILES
    ClearService.srv
 )
@@ -70,10 +72,10 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   nav_msgs#   sensor_msgs#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
